# ScratchRobin

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  FEATURES.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SUMMARY.md  LICENSE  MARIADB_SUPPORT_README.md  MSSQL_SUPPORT_README.md  MYSQL_SUPPORT_README.md  PHASE1_SUMMARY.md  POSTGRESQL_SUPPORT_README.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STATUS.md  README.md  WEEK1_STATUS.md  WEEK2_STATUS.md  WEEK3_STATUS.md  WEEK4_STATUS.md  WEEK5_STATUS.md  WEEK6_STATUS.md  WEEK7_STATUS.md  WORKPLAN.md  WORKPLAN_UNIMPLEMENTED.md  WORK_TRACKER.md  build-appimage.sh  test_connection  test_connection.cpp  test_driver  test_driver.cpp  test_scratchrobin_connection.cpp  test_simple_connection  test_simple_connection.cpp  test_tree_integration.cpp
src/: CMakeLists.txt  main.cpp
src/advanced/: advanced_services.cpp  advanced_services.h
src/app/: app.cpp  app.h  gui_main.cpp  main.cpp
src/backend/: native_adapter_gateway.cpp  native_adapter_gateway.h  native_parser_compiler.cpp  native_parser_compiler.h  parser_port_registry.cpp  parser_port_registry.h  preview_metadata_store.cpp  preview_metadata_store.h  preview_object_metadata_store.cpp  preview_object_metadata_store.h  query_request.cpp  query_request.h  query_response.h  query_router.cpp  query_router.h  scratchbird_catalog_preview.cpp  scratchbird_catalog_preview.h  scratchbird_connection.cpp  scratchbird_connection.h  scratchbird_metadata_provider.cpp  scratchbird_metadata_provider.h  scratchbird_object_types.cpp  scratchbird_object_types.h  scratchbird_runtime_config.h  scratchbird_sbwp_client.cpp  scratchbird_sbwp_client.h  server_session_gateway.cpp  server_session_gateway.h  session_client.cpp  session_client.h
src/components/: query_parser.cpp  query_parser.h  schema_loader.cpp  schema_loader.h  sql_executor.cpp  sql_executor.h
src/connection/: connection_services.cpp  connection_services.h
src/constraint/: constraint_manager.cpp  constraint_manager.h
src/core/: ai_assistant.cpp  ai_assistant.h  ai_providers.cpp  api_generator.cpp  api_generator.h  app_config.cpp  app_config.h  application.cpp  application.h  async_query_executor.cpp  async_query_executor.h  audit_log_manager.cpp  audit_log_manager.h  backup_manager.cpp  backup_manager.h  beta1b_contracts.cpp  beta1b_contracts.h  bulk_edit_manager.cpp  bulk_edit_manager.h  capability_detector.cpp  capability_detector.h  cdc_connectors.h  cdc_streaming.cpp  cdc_streaming.h  code_snippet_manager.cpp  code_snippet_manager.h  collaboration.cpp  config.cpp  config.h  config_manager.cpp  config_manager.h  connection_backend.h  connection_manager.cpp  connection_manager.h  connection_pool_manager.cpp  connection_pool_manager.h  credentials.cpp  credentials.h  crypto_utils.cpp  data_lineage.cpp  (+107 more)
src/database/: database_driver_manager.cpp  database_driver_manager.cpp.backup  database_driver_manager.h  database_driver_manager.h.backup  mariadb_catalog.cpp  mariadb_catalog.h  mariadb_connection.cpp  mariadb_connection.h  mariadb_features.cpp  mariadb_features.h  mariadb_syntax.cpp  mariadb_syntax.h  mssql_catalog.cpp  mssql_catalog.h  mssql_connection.cpp  mssql_connection.h  mssql_features.cpp  mssql_features.h  mssql_syntax.cpp  mssql_syntax.h  mysql_catalog.cpp  mysql_catalog.h  mysql_connection.cpp  mysql_connection.h  mysql_features.cpp  mysql_features.h  postgresql_catalog.cpp  postgresql_catalog.h  postgresql_connection.cpp  postgresql_connection.h  postgresql_features.cpp  postgresql_features.h  postgresql_syntax.cpp  postgresql_syntax.h
src/diagram/: command.cpp  command.h  diagram_serialization.cpp  diagram_services.cpp  diagram_services.h  export_manager.cpp  export_manager.h  graphviz_layout.cpp  graphviz_layout.h  layout_engine.h  notation_renderer.h  reverse_engineer.cpp  reverse_engineer.h
src/editor/: text_editor.cpp  text_editor.h
src/execution/: sql_executor.cpp  sql_executor.h
src/gui/: diagram_canvas.cpp  diagram_canvas.h  main_frame.cpp  main_frame.h  scratchrobin_app.cpp  scratchrobin_app.h
src/index/: index_manager.cpp  index_manager.h
src/metadata/: cache_manager.cpp  cache_manager.h  metadata_manager.cpp  metadata_manager.h  object_hierarchy.cpp  object_hierarchy.h  schema_collector.cpp  schema_collector.h
src/packaging/: packaging_services.cpp  packaging_services.h
src/phases/: phase00_governance.cpp  phase00_governance.h  phase01_scope.cpp  phase01_scope.h  phase02_runtime.cpp  phase02_runtime.h  phase03_project_data.cpp  phase03_project_data.h  phase04_backend.cpp  phase04_backend.h  phase05_ui.cpp  phase05_ui.h  phase06_diagramming.cpp  phase06_diagramming.h  phase07_reporting.cpp  phase07_reporting.h  phase08_advanced.cpp  phase08_advanced.h  phase09_packaging.cpp  phase09_packaging.h  phase10_conformance_release.cpp  phase10_conformance_release.h  phase_contract.h  phase_registry.cpp  phase_registry.h
src/project/: project_services.cpp  project_services.h
src/query/: query_history.cpp  query_history.h
src/release/: release_conformance_services.cpp  release_conformance_services.h
src/reporting/: reporting_services.cpp  reporting_services.h
src/res/: art_provider.cpp  art_provider.h  default_icons.h  exception16_png.cpp  fk16_png.cpp  icon_manager.cpp  icon_manager.h  pk16_png.cpp  pkfk16_png.cpp  role16_png.cpp  tree_image_list.cpp  tree_image_list.h
src/runtime/: runtime_config.cpp  runtime_config.h  runtime_services.cpp  runtime_services.h
src/search/: search_engine.cpp  search_engine.h
src/table/: table_designer.cpp  table_designer.h
src/tools/: scratchrobin_tool_main.cpp
src/types/: connection_types.h  database_types.h  query_types.h  result.h
src/ui/: about_dialog.cpp  about_dialog.h  ai_assistant_panel.cpp  ai_assistant_panel.h  ai_settings_dialog.cpp  alert_notification_system.cpp  alert_notification_system.h  app_icons.cpp  app_icons.h  audit_log_viewer.cpp  audit_log_viewer.h  backup_dialog.cpp  backup_dialog.h  (+347 more)
tests/: CMakeLists.txt  README.md  backend_contract_tests.cpp  test_ddl_generation.cpp  test_harness.h  test_main.cpp  test_ui_components.cpp
(+1321 files in other folders)
